--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,13 +17,15 @@ html, body              { margin:0; padding:0; font-family:Arial; font-size:14px
 #content_top            { width:100%; height:240px; background:#eaeaea; }
 #content_main           { width:100%; }
 
+#footer                       { width:100%; height:80px; padding-top:50px; }
+#footer_menu                  { margin-bottom:10px; }
+#footer_menu ul.menu          { list-style:none; }
+#footer_menu ul.menu li       { display:inline; }
+
 table.product_list      { width:100%; }
 table.product_list td   { padding:15px 8px; border-bottom:1px solid #bbb; vertical-align:top; }
 
 a.ordered_desc          { display:block; float:right; width:21px; height:18px; margin-right:10px; background:url(../images/arrow_down.png); }
 a.add_to_cart           { display:block; width:33px; height:33px; border:none; background:url(../images/add_to_cart.png); }
 
-#footer                       { width:100%; height:80px; padding-top:50px; }
-#footer_menu                  { margin-bottom:10px; }
-#footer_menu ul.menu          { list-style:none; }
-#footer_menu ul.menu li       { display:inline; }
+div.pagination          { margin:15px; }
