--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,20 @@
-html, body              { margin:0; padding:0; font-family:Arial; font-size:14px; }
+html, body                    { margin:0; padding:0; font-family:'Lucida Grande', Arial; font-size:12pt; color:#666; }
 
-#main_container         { width:990px; margin:0 auto; }
-#header                 { position:relative; width:100%; height:164px; }
-#logo                   { position:absolute; top:55px; left:20px; width:158px; height:36px; background:url(../images/logo.jpg); }
-#title                  { position:absolute; top:95px; left:20px; }
-#header_tools           { position:absolute; top:70px; right:0; width:315px; height:32px; background:url(../images/header_tools.jpg); }
-#header_search          { margin:5px; border:none; }
+#main_container               { width:977px; margin:0 auto; }
+#header                       { position:relative; width:100%; height:164px; }
+#logo                         { position:absolute; top:33px; left:0; width:158px; height:36px; background:url(../images/logo.png); }
+#title                        { position:absolute; top:88px; left:0; }
+
+/* Search Bar */
+#search_bar                   { position:absolute; top:58px; right:0; width:315px; height:32px; background:url(../images/search_bar_bg.png); }
+#search_bar_inner             { position:relative; }
+#search_bar_search            { width:185px; }
+#search_bar_search input      { width:150px; margin:6px 5px 5px 5px; border:none; font-size:11pt; line-height:22px; }
+#search_bar_inner a           { position:absolute; top:0; display:block; height:32px; }
+a.search_bar_rss              { left:185px; width:29px; background:url(../images/search_bar_rss.png) center center no-repeat; }
+a.search_bar_cart             { left:215px; width:32px; background:url(../images/search_bar_cart.png) center center no-repeat; }
+a.search_bar_account          { left:248px; width:32px; background:url(../images/search_bar_account.png) center center no-repeat; }
+a.search_bar_print            { left:281px; width:33px; background:url(../images/search_bar_print.png) center center no-repeat; }
 
 #main_nav                     { width:100%; height:134px; background:#dadada; }
 #main_nav ul.menu             { list-style:none; }
@@ -13,19 +22,19 @@ html, body              { margin:0; padding:0; font-family:Arial; font-size:14px
 #main_nav ul.menu li a        { display:block; width:131px; height:123px; margin:5px; line-height:123px; float:left; background:#efefef; text-align:center; text-decoration:none; vertical-align:bottom; }
 #main_nav ul.menu li a:hover  { background:#ccc; }
 
-#body                   { width:100%; }
-#content_top            { width:100%; height:240px; background:#eaeaea; }
-#content_main           { width:100%; }
+#body                         { width:100%; }
+#content_top                  { width:100%; height:240px; background:#eaeaea; }
+#content_main                 { width:100%; }
 
 #footer                       { width:100%; height:80px; padding-top:50px; }
 #footer_menu                  { margin-bottom:10px; }
 #footer_menu ul.menu          { list-style:none; }
 #footer_menu ul.menu li       { display:inline; }
 
-table.product_list      { width:100%; }
-table.product_list td   { padding:15px 8px; border-bottom:1px solid #bbb; vertical-align:top; }
+table.product_list            { width:100%; }
+table.product_list td         { padding:15px 8px; border-bottom:1px solid #bbb; vertical-align:top; }
 
-a.ordered_desc          { display:block; float:right; width:21px; height:18px; margin-right:10px; background:url(../images/arrow_down.png); }
-a.add_to_cart           { display:block; width:33px; height:33px; border:none; background:url(../images/add_to_cart.png); }
+a.ordered_desc                { display:block; float:right; width:21px; height:18px; margin-right:10px; background:url(../images/arrow_down.png); }
+a.add_to_cart                 { display:block; width:33px; height:33px; border:none; background:url(../images/add_to_cart.png); }
 
-div.pagination          { margin:15px; }
+div.pagination                { margin:15px; }
