--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,7 @@ html, body              { margin:0; padding:0; font-family:Arial; font-size:14px
 #body                   { width:100%; }
 #content_top            { width:100%; height:240px; background:#eaeaea; }
 #content_main           { width:100%; }
+#detail_main            { width:100%; }
 
 #footer                       { width:100%; height:80px; padding-top:50px; }
 #footer_menu                  { margin-bottom:10px; }
@@ -25,7 +26,53 @@ html, body              { margin:0; padding:0; font-family:Arial; font-size:14px
 table.product_list      { width:100%; }
 table.product_list td   { padding:15px 8px; border-bottom:1px solid #bbb; vertical-align:top; }
 
-a.ordered_desc          { display:block; float:right; width:21px; height:18px; margin-right:10px; background:url(../images/arrow_down.png); }
-a.add_to_cart           { display:block; width:33px; height:33px; border:none; background:url(../images/add_to_cart.png); }
+.ordered_desc          { display:block; float:right; width:21px; height:18px; margin-right:10px; background:url(../images/arrow_down.png); }
+.add_to_cart           { display:block; width:33px; height:33px; border:none; background:url(../images/add_to_cart.png); }
 
 div.pagination          { margin:15px; }
+
+.item_hover             { background:#aaa; cursor:pointer; }
+
+div.tab_panel {
+	width:80%;
+	margin:auto;
+	padding-top:30px;
+}
+
+ul.tabs {
+	list-style:none;
+	margin:0 !important;
+	padding:0;
+	height:30px;
+}
+
+ul.tabs li {
+	float:left;
+	text-indent:0;
+	padding:0;
+	margin:0 !important;
+	list-style-image:none !important;
+}
+
+ul.tabs li {
+	padding-right:5px;
+}
+
+ul.tabs div {
+	background:#999;
+	font-size:11px;
+	display:block;
+	height:30px;
+	line-height:30px;
+	text-align:center;
+	text-decoration:none;
+	color:#000;
+	padding:0px 15px 0px 15px;
+	margin:0px;
+	position:relative;
+	top:0px;
+}
+
+div.panes {
+	border:9px solid orange;
+}
