--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@ html, body                    { margin:0; padding:0; font-family:Lucida Sans Uni
 #main_container               { width:977px; margin:0 auto; }
 
 /* Header */
-#header                       { width:100%; height:140px; }
+#header                       { width:100%; height:210px; }
 #header_inner                 { position:relative; width:100%; height:164px; }  
 #logo                         { position:absolute; top:33px; left:0; width:158px; height:36px; background:url(../images/logo.png); }
 #title                        { position:absolute; top:88px; left:0; }
@@ -19,7 +19,7 @@ a.search_bar_account          { left:248px; width:32px; background:url(../images
 a.search_bar_print            { left:281px; width:33px; background:url(../images/search_bar_print.png) center center no-repeat; }
 
 /* Main Nav */
-#main_nav                     { position:absolute; top:150px; height:134px; }
+#main_nav                     { position:absolute; z-index:1; top:150px; height:134px; }
 #main_nav ul.menu             { position:relative; list-style:none; }
 #main_nav ul.menu li          { display:inline; }
 #main_nav ul.menu li a        { display:block; line-height:123px; float:left; text-align:center; text-decoration:none; vertical-align:bottom; }
@@ -34,7 +34,10 @@ a.search_bar_print            { left:281px; width:33px; background:url(../images
 
 /* Content Area */
 #body                         { width:100%; }
-#content_top                  { width:100%; height:399px; }
+#content_top                  { position:relative; width:100%; height:329px; color:#fff; }
+#content_top div.summary      { position:absolute; top:87px; left:300px; width:634px; }
+#content_top div.image        { position:absolute; top:87px; left:20px; width:260px; height:190px; background:yellow; }
+#content_top h1               { font-size:15pt; font-weight:normal; padding:0 300px 10px 0; line-height:23pt; border-bottom:1px solid #fff; }
 #content_top_short            { width:100%; height:170px; }
 #content_main                 { width:945px; margin:0 auto; }
 #content_main_inner           { position:relative; width:100%; }
@@ -107,13 +110,13 @@ div.gray_line                 { height:0px; border-top:1px solid #ddd; }
 div.header_bar_blue_full      { width:941px; height:28px; margin-bottom:3px; background:url(../images/header_bar_blue_full.png) no-repeat; }
 
 /* Page-specific styling */
-div#sign_in                    { margin:-10px 0 10px 0; }
-div.pagination                 { padding:40px 0 0 10px; }
-table.reg_funnel               { width:100%; margin-top:44px; }
-table.program_list             { width:100%; margin-top:30px; font-size:9pt; }
-table.program_list thead td    { padding:10px; font-size:11pt; }
-table.program_list td          { padding:18px 8px; border-bottom:1px solid #ddd; vertical-align:top; }
-table.program_list .item_hover { background:#ededed url(../images/list_item_bg.png) top repeat-x; cursor:pointer; }
+div#sign_in                       { margin:-10px 0 10px 0; }
+div.pagination                    { padding:40px 0 0 10px; }
+table.reg_funnel                  { width:100%; margin-top:44px; }
+table.program_list                { width:100%; margin-top:30px; font-size:9pt; }
+table.program_list thead td       { padding:10px; font-size:11pt; }
+table.program_list td             { padding:18px 8px; border-bottom:1px solid #ddd; vertical-align:top; }
+table.program_list tbody tr:hover { background:#ededed url(../images/list_item_bg.png) top repeat-x; cursor:pointer; }
 
 /* Tabbed content boxes */
 .tab_content_container          { width:100%; color:#575757; }
