--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -174,6 +174,7 @@ ul.tabs li.current {
 
 ul.tabs li div {
 	background-image:url(../images/sprite.png);
+	position:relative;
 }
 
 ul.tabs li > div {
@@ -187,14 +188,16 @@ ul.tabs li > div {
 }
 
 ul.tabs li > div > span {
-    padding:0 5px 0 10px;
+    padding:0 8px 0 10px;
 }
 
 ul.tabs li > div > div {
+    position:absolute;
+    right:0;
+    top:0;
     background-position: 0 0;
     width:4px;
     height:30px;
-    float:right;
 }
 
 div.panes > div {
