Update for cart display for super users.
Most of the UI logic is in place and seems to work ok. Tried
to break it in a few ways and it seems like it works. It doesn't
yet tie into the data backend, need that in place before Continue
can be hooked into the server-side.

Added the users accountId to the credentials.

Signed-off-by: Chris Boertien <chris.boertien@gmail.com>

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -166,6 +166,14 @@ div#search_header .close:hover { background:#bbb; cursor:pointer; }
 div#search_body label         { }
 div#search_body input         { }
 
+/* Super user cart */
+div#super_cart_list           { border:1px solid #0F0; }
+div#super_cart_list > div     { border:1px solid #F00; }
+div#add_attendee_button       { width:200px; height:50px; }
+div#super_cart_list select    { width:200px; }
+
+div#super_cart_list           { position:relative; top:0px; }
+div#super_cart_list > div     { margin:5px; padding:5px; background:#eee; }
 
 div.tab_panel {
     width:765px;
